Fix pdf render alignment

--- a/src/App.css
+++ b/src/App.css
@@ -2194,6 +2194,7 @@ input:checked+.sliderMin:before {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 99;
 }
 
 .hidden {
@@ -2247,7 +2248,7 @@ input:checked+.sliderMin:before {
   overflow: auto;
   position: absolute;
   height: 100%;
-  text-align: center;
+  width: calc(100% - 20px);
 }
 
 .Example__container__load {
